--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.2.0"
+  },
+  "jest": {
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   }
 }
