--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "react-addons-test-utils": "^15.6.2",
+    "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.2.0",
     "sinon": "^4.4.1"
   },
