--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
     "react-scripts": "1.1.1",
+    "react-router-dom": "^4.2.2",
     "styled-components": "^3.1.6"
   },
   "scripts": {
@@ -22,6 +23,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "react-addons-test-utils": "^15.6.2",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.2.0",
     "sinon": "^4.4.1"
