--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "jest-cli": "^20.0.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
-    "react-scripts": "1.1.1",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1",
     "styled-components": "^3.1.6"
   },
   "scripts": {
