--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
+    "react-loading": "^1.0.3",
+    "react-loading-animation": "^1.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "styled-components": "^3.1.6"
